--- a/inventarios/staticfiles/templates/html/app/auth-sign-in.html
+++ b/inventarios/staticfiles/templates/html/app/auth-sign-in.html
@@ -37,7 +37,7 @@
                                  <h2 class="mb-2">Iniciar Sesión</h2>
                                  <p>Inicie Sesión en Ottsa Inventarios</p>
                                  <form name="login-form" method="post" action="{% url 'login' %}">
-                                    
+                                    {% csrf_token %}
                                     <div class="row">
                                        <div class="col-lg-12">
                                           <div class="floating-label form-group">
